--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server.ts",
+    "api": "tsx api-server.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -44,17 +46,28 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.47.14",
     "@tanstack/react-query": "^5.56.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.12",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-helmet": "^6.1.11",
     "@uiw/react-md-editor": "^4.0.5",
+    "@vercel/blob": "^0.27.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "express": "^4.21.2",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.18.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.1",
+    "multer": "^1.4.5-lts.1",
+    "next": "^15.1.5",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
@@ -66,6 +79,8 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.15.0",
+    "rehype-sanitize": "^6.0.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "vaul": "^1.1.2",
@@ -73,7 +88,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
